--- a/requirements.txt
+++ b/requirements.txt
@@ -50,3 +50,90 @@ websockets==15.0.1
 Werkzeug==3.1.3
 wrapt==1.17.3
 yarl==1.22.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.16
+aioredis==2.0.1
+aiosignal==1.3.2
+alembic==1.17.0
+APScheduler==3.11.0
+argon2-cffi==25.1.0
+argon2-cffi-bindings==25.1.0
+attrs==25.3.0
+bcrypt==5.0.0
+beautifulsoup4==4.12.3
+bleach==6.2.0
+cbor2==5.7.0
+charset-normalizer==3.4.0
+contourpy==1.3.3
+cycler==0.12.1
+Cython==3.0.12
+dnspython==2.8.0
+email-validator==2.3.0
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
+Flask-Mailman==1.1.1
+Flask-Migrate==4.1.0
+Flask-Principal==0.4.0
+Flask-Security==5.6.2
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+fonttools==4.60.1
+forex-python==1.8
+fpdf==1.7.2
+frozendict==2.4.6
+frozenlist==1.5.0
+greenlet==3.2.4
+gunicorn==23.0.0
+html5lib==1.1
+IMAPClient==3.0.1
+importlib_resources==6.5.2
+joblib==1.4.2
+kiwisolver==1.4.9
+libpass==1.9.3
+lxml==6.0.1
+Mako==1.3.10
+matplotlib==3.10.7
+multitasking==0.0.11
+numpy==2.2.3
+pandas==2.2.3
+peewee==3.17.9
+phonenumberslite==9.0.16
+pillow==11.3.0
+platformdirs==4.3.7
+prometheus_client==0.21.1
+pyaes==1.6.1
+pyasn1==0.6.1
+pyOpenSSL==25.3.0
+pyparsing==3.2.5
+pyTelegramBotAPI==4.25.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-telegram-bot==21.8
+pytz==2025.1
+qrcode==8.2
+requests==2.32.3
+rsa==4.9
+schedule==1.2.2
+sentry-sdk==2.25.1
+setuptools==75.8.0
+simplejson==3.20.1
+six==1.17.0
+soupsieve==2.6
+SQLAlchemy==2.0.44
+SQLAlchemy-Utils==0.42.0
+supervisor==4.2.5
+telebot==0.0.5
+Telethon==1.38.1
+tenacity==9.1.2
+tradingview-ta==3.3.0
+tzdata==2025.1
+tzlocal==5.3.1
+urllib3==2.2.3
+webauthn==2.7.0
+webencodings==0.5.1
+websocket-client==1.8.0
+whitenoise==6.11.0
+WTForms==3.2.1
+yfinance==0.2.55
+flask-limiter
+flask-jwt-extended
