--- a/requirements.txt
+++ b/requirements.txt
@@ -42,6 +42,7 @@ pydantic_core==2.41.4
 Pygments==2.19.2
 PyJWT==2.10.1
 python-dotenv==1.2.1
+python-telegram-bot==22.5
 realtime==2.22.2
 requests==2.32.5
 rich==14.2.0
@@ -51,7 +52,6 @@ StrEnum==0.4.15
 supabase==2.22.2
 supabase-auth==2.22.2
 supabase-functions==2.22.2
-telegram==0.0.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.5.0
