--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ PyJWT==2.10.1
 python-dotenv==1.2.1
 python-telegram-bot==22.5
 realtime==2.22.2
+redis==7.0.1
 requests==2.32.5
 rich==14.2.0
 sniffio==1.3.1
