--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Flask-Bcrypt==1.0.1
 Flask-JWT-Extended==4.7.1
 Flask-Limiter==4.0.0
 Flask-Login==0.6.3
+Flask-WTF==1.2.1
 gunicorn==23.0.0
 h11==0.16.0
 h2==4.3.0
