--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ rich==14.2.0
 sniffio==1.3.1
 storage3==2.22.2
 StrEnum==0.4.15
+structlog==24.8.0
 supabase==2.22.2
 supabase-auth==2.22.2
 supabase-functions==2.22.2
