--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ annotated-types==0.7.0
 anyio==4.11.0
 bcrypt==5.0.0
 blinker==1.9.0
+cachelib==0.13.0
 certifi==2025.10.5
 cffi==2.0.0
 charset-normalizer==3.4.4
@@ -12,10 +13,11 @@ Deprecated==1.2.18
 deprecation==2.1.0
 Flask==3.1.2
 Flask-Bcrypt==1.0.1
+Flask-Caching==2.3.1
 Flask-JWT-Extended==4.7.1
 Flask-Limiter==4.0.0
 Flask-Login==0.6.3
-Flask-WTF==1.2.1
+Flask-WTF==1.2.2
 gunicorn==23.0.0
 h11==0.16.0
 h2==4.3.0
@@ -33,6 +35,7 @@ mdurl==0.1.2
 multidict==6.7.0
 ordered-set==4.1.0
 packaging==25.0
+pillow==12.0.0
 postgrest==2.22.2
 propcache==0.4.1
 psutil==7.1.2
@@ -44,6 +47,7 @@ Pygments==2.19.2
 PyJWT==2.10.1
 python-dotenv==1.2.1
 python-telegram-bot==22.5
+qrcode==8.2
 realtime==2.22.2
 redis==7.0.1
 requests==2.32.5
@@ -51,7 +55,7 @@ rich==14.2.0
 sniffio==1.3.1
 storage3==2.22.2
 StrEnum==0.4.15
-structlog==24.8.0
+structlog==25.5.0
 supabase==2.22.2
 supabase-auth==2.22.2
 supabase-functions==2.22.2
@@ -61,4 +65,5 @@ urllib3==2.5.0
 websockets==15.0.1
 Werkzeug==3.1.3
 wrapt==1.17.3
+WTForms==3.2.1
 yarl==1.22.0
