--- a/requirements.txt
+++ b/requirements.txt
@@ -1,69 +1,68 @@
-annotated-types==0.7.0
-anyio==4.11.0
-bcrypt==5.0.0
+attrs==25.3.0
+Automat==25.4.16
+beautifulsoup4==4.13.5
 blinker==1.9.0
-cachelib==0.13.0
-certifi==2025.10.5
-cffi==2.0.0
-charset-normalizer==3.4.4
+certifi==2025.8.3
+cffi==1.17.1
+charset-normalizer==3.4.3
 click==8.3.0
 colorama==0.4.6
-cryptography==46.0.3
-Deprecated==1.2.18
-deprecation==2.1.0
+constantly==23.10.4
+cryptography==45.0.6
+cssselect==1.3.0
+defusedxml==0.7.1
+et_xmlfile==2.0.0
+filelock==3.19.1
 Flask==3.1.2
-Flask-Bcrypt==1.0.1
-Flask-Caching==2.3.1
-Flask-JWT-Extended==4.7.1
-Flask-Limiter==4.0.0
-Flask-Login==0.6.3
-Flask-WTF==1.2.2
-gunicorn==23.0.0
 h11==0.16.0
-h2==4.3.0
-hpack==4.1.0
-httpcore==1.0.9
-httpx==0.28.1
-hyperframe==6.1.0
-idna==3.11
+hyperlink==21.0.0
+idna==3.10
+incremental==24.7.2
+itemadapter==0.12.1
+itemloaders==1.3.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
-limits==5.6.0
-markdown-it-py==4.0.0
+jmespath==1.0.1
+lxml==6.0.1
 MarkupSafe==3.0.3
-mdurl==0.1.2
-multidict==6.7.0
-ordered-set==4.1.0
+numpy==2.3.2
+openpyxl==3.1.5
+outcome==1.3.0.post0
 packaging==25.0
-pillow==12.0.0
-postgrest==2.22.2
-propcache==0.4.1
-psutil==7.1.2
-psycopg2-binary==2.9.11
-pycparser==2.23
-pydantic==2.12.3
-pydantic_core==2.41.4
-Pygments==2.19.2
-PyJWT==2.10.1
-python-dotenv==1.2.1
-python-telegram-bot==22.5
-qrcode==8.2
-realtime==2.22.2
-redis==7.0.1
+panda==0.3.1
+pandas==2.3.2
+parsel==1.10.0
+Protego==0.5.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+PyDispatcher==2.0.7
+pyOpenSSL==25.1.0
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+pytz==2025.2
+queuelib==1.8.0
 requests==2.32.5
-rich==14.2.0
+requests-file==2.1.0
+Scrapy==2.13.3
+selenium==4.35.0
+service-identity==24.2.0
+setuptools==80.9.0
+sib-api-v3-sdk==7.6.0
+six==1.17.0
 sniffio==1.3.1
-storage3==2.22.2
-StrEnum==0.4.15
-structlog==25.5.0
-supabase==2.22.2
-supabase-auth==2.22.2
-supabase-functions==2.22.2
-typing-inspection==0.4.2
-typing_extensions==4.15.0
+sortedcontainers==2.4.0
+soupsieve==2.8
+tldextract==5.3.0
+trio==0.30.0
+trio-websocket==0.12.2
+Twisted==25.5.0
+typing_extensions==4.14.1
+tzdata==2025.2
 urllib3==2.5.0
-websockets==15.0.1
+w3lib==2.3.1
+websocket-client==1.8.0
 Werkzeug==3.1.3
-wrapt==1.17.3
-WTForms==3.2.1
-yarl==1.22.0
+wsproto==1.2.0
+zope.interface==7.2
