--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+anyio==4.12.0
 attrs==25.3.0
 Automat==25.4.16
 beautifulsoup4==4.13.5
@@ -16,6 +17,8 @@ filelock==3.19.1
 Flask==3.1.2
 gunicorn==23.0.0
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
