--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ pandas==2.3.2
 parsel==1.10.0
 Protego==0.5.0
 psutil==7.1.3
+psycopg2-binary==2.9.11
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
