--- a/requirements.txt
+++ b/requirements.txt
@@ -49,6 +49,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
 queuelib==1.8.0
+redis==7.1.0
 requests==2.32.5
 requests-file==2.1.0
 Scrapy==2.13.3
