--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ defusedxml==0.7.1
 et_xmlfile==2.0.0
 filelock==3.19.1
 Flask==3.1.2
+Flask-JWT-Extended==4.7.1
 Flask-Login==0.6.3
 gunicorn==23.0.0
 h11==0.16.0
@@ -44,6 +45,7 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
 PyDispatcher==2.0.7
+PyJWT==2.10.1
 pyOpenSSL==25.1.0
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
