--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 anyio==4.12.0
 attrs==25.3.0
 Automat==25.4.16
+bcrypt==5.0.0
 beautifulsoup4==4.13.5
 blinker==1.9.0
 certifi==2025.8.3
@@ -15,6 +16,7 @@ defusedxml==0.7.1
 et_xmlfile==2.0.0
 filelock==3.19.1
 Flask==3.1.2
+Flask-Bcrypt==1.0.1
 Flask-JWT-Extended==4.7.1
 Flask-Login==0.6.3
 gunicorn==23.0.0
