--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,13 @@ constantly==23.10.4
 cryptography==45.0.6
 cssselect==1.3.0
 defusedxml==0.7.1
+Deprecated==1.3.1
 et_xmlfile==2.0.0
 filelock==3.19.1
 Flask==3.1.2
 Flask-Bcrypt==1.0.1
 Flask-JWT-Extended==4.7.1
+Flask-Limiter==4.1.0
 Flask-Login==0.6.3
 gunicorn==23.0.0
 h11==0.16.0
@@ -31,10 +33,12 @@ itemloaders==1.3.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
 jmespath==1.0.1
+limits==5.6.0
 lxml==6.0.1
 MarkupSafe==3.0.3
 numpy==2.3.2
 openpyxl==3.1.5
+ordered-set==4.1.0
 outcome==1.3.0.post0
 packaging==25.0
 panda==0.3.1
@@ -76,5 +80,6 @@ urllib3==2.5.0
 w3lib==2.3.1
 websocket-client==1.8.0
 Werkzeug==3.1.3
+wrapt==2.0.1
 wsproto==1.2.0
 zope.interface==7.2
