--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.7.0
 anyio==4.12.0
 attrs==25.3.0
 Automat==25.4.16
@@ -14,6 +15,7 @@ cryptography==45.0.6
 cssselect==1.3.0
 defusedxml==0.7.1
 Deprecated==1.3.1
+deprecation==2.1.0
 et_xmlfile==2.0.0
 filelock==3.19.1
 Flask==3.1.2
@@ -23,8 +25,11 @@ Flask-Limiter==4.1.0
 Flask-Login==0.6.3
 gunicorn==23.0.0
 h11==0.16.0
+h2==4.3.0
+hpack==4.1.0
 httpcore==1.0.9
 httpx==0.28.1
+hyperframe==6.1.0
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
@@ -36,6 +41,7 @@ jmespath==1.0.1
 limits==5.6.0
 lxml==6.0.1
 MarkupSafe==3.0.3
+multidict==6.7.0
 numpy==2.3.2
 openpyxl==3.1.5
 ordered-set==4.1.0
@@ -44,20 +50,26 @@ packaging==25.0
 panda==0.3.1
 pandas==2.3.2
 parsel==1.10.0
+postgrest==2.24.0
+propcache==0.4.1
 Protego==0.5.0
 psutil==7.1.3
 psycopg2-binary==2.9.11
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
+pydantic==2.12.5
+pydantic_core==2.41.5
 PyDispatcher==2.0.7
 PyJWT==2.10.1
 pyOpenSSL==25.1.0
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+python-telegram-bot==22.5
 pytz==2025.2
 queuelib==1.8.0
+realtime==2.24.0
 redis==7.1.0
 requests==2.32.5
 requests-file==2.1.0
@@ -70,16 +82,24 @@ six==1.17.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.8
+storage3==2.24.0
+StrEnum==0.4.15
+supabase==2.24.0
+supabase-auth==2.24.0
+supabase-functions==2.24.0
 tldextract==5.3.0
 trio==0.30.0
 trio-websocket==0.12.2
 Twisted==25.5.0
+typing-inspection==0.4.2
 typing_extensions==4.14.1
 tzdata==2025.2
 urllib3==2.5.0
 w3lib==2.3.1
 websocket-client==1.8.0
+websockets==15.0.1
 Werkzeug==3.1.3
 wrapt==2.0.1
 wsproto==1.2.0
+yarl==1.22.0
 zope.interface==7.2
